tests/fixtures/fail/borrow_type_non_borrow_initializer.sc
let main(): i32 = {
  let value = 42
  let alias: borrow(i32) = value
  alias
}
